# MinBucket-MPSI

./: LICENSE  README.md
JPEQT/: CMakeLists.txt  JPEQT.cpp  JPEQT.h  communication.h  elgamal.h  readFiles.h
MCRG/: CMakeLists.txt
MCRG/mcrg/: MCRG.cpp  MCRG.h  balanced_MCRG.cpp
MCRG/mcrg/result/: receiver_result_0  receiver_result_1  receiver_result_2  receiver_result_3  receiver_result_4  receiver_result_5  receiver_result_6  receiver_result_7  receiver_result_8  sender_result_0  sender_result_1  sender_result_2  sender_result_3  sender_result_4  sender_result_5  sender_result_6  sender_result_7  sender_result_8
uMCRG/MCRG/: 16M-1024.json  CMakeLists.txt  auto_prepare.py
uMCRG/MCRG/cli/receiver/: clp.h  receiver.cpp
uMCRG/MCRG/cli/sender/: clp.h  sender.cpp
uMCRG/MCRG/cli/simple_hash/: CMakeLists.txt  simple_hash.cpp
uMCRG/MCRG/csvfiles/: receiver_0_0.csv  receiver_0_1.csv  receiver_1_0.csv  receiver_1_1.csv  receiver_1_2.csv  receiver_1_3.csv  receiver_1_4.csv  sender.csv
uMCRG/MCRG/hash_result/: receiver_1_0  receiver_1_1  receiver_1_2  receiver_1_3  receiver_1_4
uMCRG/MCRG/mcrg_result/: mapping  orig_item  receiver_0_0  receiver_0_1  sender_item  sender_mcrg_0  sender_mcrg_1
uMCRG/MCRG/parameters/: 16M-1024.json  16M-4096.json
uMCRG/MCRG/receiver/apsu/: receiver_db.cpp  receiver_db.h  receiver_ddh.cpp  receiver_ddh.h
uMCRG/MCRG/receiver/apsu/zmq/: receiver_dispatcher_ddh.cpp  receiver_dispatcher_ddh.h
uMCRG/MCRG/sender/apsu/: sender_ddh.cpp  sender_ddh.h
uMCRG/MCRG/tools/: auto_test.py
uMCRG/MCRG_diff_large/: CMakeLists.txt
uMCRG/MCRG_diff_large/mcrg_diff_large/: ssPEQT_ROT.cpp  ssPEQT_ROT.h  unbalanced_MCRG.cpp
uMCRG/MCRG_diff_large/mcrg_result/: receiver_mcrg_0  receiver_mcrg_1  sender_mcrg_0  sender_mcrg_1
